[PPP-6083] Removed xmlgraphics-commons from EMR770 driver

--- a/shims/emr770/driver/pom.xml
+++ b/shims/emr770/driver/pom.xml
@@ -646,6 +646,10 @@
           <groupId>*</groupId>
           <artifactId>batik-parser</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.xmlgraphics</groupId>
+          <artifactId>xmlgraphics-commons</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
