--- a/shim-api/pom.xml
+++ b/shim-api/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-hadoop-shims</artifactId>
-    <version>11.0.0.0-SNAPSHOT</version>
+    <version>11.0.0.0-215</version>
   </parent>
 
   <artifactId>shim-api</artifactId>
-  <version>11.0.0.0-SNAPSHOT</version>
+  <version>11.0.0.0-215</version>
   <packaging>bundle</packaging>
 
   <dependencies>
