[BAD-1989][BACKLOG-48243]Parquet Output Step Is Missing Supported Compression Types, Errors while executing Parquet Input/Output ktr with ApacheVanilla

--- a/shims/apache/driver/pom.xml
+++ b/shims/apache/driver/pom.xml
@@ -455,6 +455,11 @@
       <artifactId>hive-storage-api</artifactId>
       <version>4.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>at.yawk.lz4</groupId>
+      <artifactId>lz4-java</artifactId>
+      <version>${lz4-java.version}</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
