--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -615,6 +615,13 @@
       <version>1.2.22</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>at.yawk.lz4</groupId>
+      <artifactId>lz4-java</artifactId>
+      <version>1.10.1</version>
+      <scope>test</scope>
+    </dependency>
+
 
   </dependencies>
   <build>
