--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-hadoop-shims</artifactId>
-    <version>11.1.0.0-SNAPSHOT</version>
+    <version>11.1.0.0-91</version>
   </parent>
 
   <groupId>org.pentaho.hadoop.shims</groupId>
   <artifactId>pentaho-hadoop-shims-common-base</artifactId>
-  <version>11.1.0.0-SNAPSHOT</version>
+  <version>11.1.0.0-91</version>
   <packaging>jar</packaging>
 
   <properties>
@@ -34,7 +34,7 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <org.apache.avro.version>1.8.0</org.apache.avro.version>
+        <org.apache.avro.version>1.12.0</org.apache.avro.version>
         <org.apache.hbase.version>2.6.2</org.apache.hbase.version>
         <org.apache.hadoop.version-hdp26>2.7.3.2.6.0.3-8</org.apache.hadoop.version-hdp26>
         <org.apache.oozie.version>4.2.0.2.6.0.3-8</org.apache.oozie.version>
