--- a/shims/cdpdc71/driver/pom.xml
+++ b/shims/cdpdc71/driver/pom.xml
@@ -42,6 +42,8 @@
     <ranger-raz-hook-s3.version>2.4.0.7.3.1.0-197</ranger-raz-hook-s3.version>
     <hadoop-shaded-guava.version>1.4.0</hadoop-shaded-guava.version>
     <slf4j.version>1.7.36</slf4j.version>
+    <!-- Libthrift version must match the version used by Cloudera to support http based Hive Connection -->
+    <org.apache.thrift.version>0.16.0</org.apache.thrift.version>
   </properties>
 
   <dependencyManagement>
@@ -387,6 +389,12 @@
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-service</artifactId>
       <version>${org.apache.hive.version}</version>
+        <exclusions>
+            <exclusion>
+                <artifactId>libthrift</artifactId>
+                <groupId>org.apache.thrift</groupId>
+            </exclusion>
+        </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.hive</groupId>
