--- a/shims/emr700/pmr/pom.xml
+++ b/shims/emr700/pmr/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-emr700-reactor</artifactId>
-    <version>11.1.0.0-SNAPSHOT</version>
+    <version>11.1.0.0-105</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-emr700-pmr-libs</artifactId>
