--- a/shims/pom.xml
+++ b/shims/pom.xml
@@ -14,6 +14,7 @@
 <packaging>pom</packaging>
 
 <properties>
+  <pentaho-hadoop-shims.version>11.1.0.0-SNAPSHOT</pentaho-hadoop-shims.version>
   <oss.license.directory>${project.build.directory}/oss_license</oss.license.directory>
   <xerces.version>2.8.1</xerces.version>
   <lz4-java.version>1.10.1</lz4-java.version>
