[DEVO-13663] - Adding a maven profile to build shaded netty

--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,18 @@
       </modules>
     </profile>
 
+    <profile>
+      <id>shaded-netty</id>
+      <activation>
+        <property>
+          <name>!skipDefault</name>
+        </property>
+      </activation>
+      <modules>
+        <module>pentaho-shaded-netty</module>
+      </modules>
+    </profile>
+
   </profiles>
 
 
