--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -618,7 +618,7 @@
     <dependency>
       <groupId>at.yawk.lz4</groupId>
       <artifactId>lz4-java</artifactId>
-      <version>1.10.1</version>
+      <version>${lz4-java.version}</version>
       <scope>test</scope>
     </dependency>
 
