--- a/shims/apachevanilla/driver/pom.xml
+++ b/shims/apachevanilla/driver/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-apachevanilla-reactor</artifactId>
-    <version>11.1.0.0-SNAPSHOT</version>
+    <version>11.1.0.0-122</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-apachevanilla</artifactId>
-  <version>11.1.0.0-SNAPSHOT</version>
+  <version>11.1.0.0-122</version>
   <packaging>jar</packaging>
 
   <properties>
@@ -17,7 +17,7 @@
     <netty.version>4.1.128.Final</netty.version>
     <commons-lang.version>2.6</commons-lang.version>
     <failureaccess.version>1.0.1</failureaccess.version>
-    <pentaho-osgi-bundles.version>11.1.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
+    <pentaho-osgi-bundles.version>11.1.0.0-122</pentaho-osgi-bundles.version>
     <org.apache.avro.version>1.12.0</org.apache.avro.version>
     <!-- Removed parquet.version override - inheriting 1.15.2 from parent (CVE-2025-46762 fix) -->
     <org.apache.hbase.version>2.6.2</org.apache.hbase.version>
