--- a/common-fragment-V1/pom.xml
+++ b/common-fragment-V1/pom.xml
@@ -279,6 +279,12 @@
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-configuration2</artifactId>
           <version>${commons.configuration2.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>commons-logging</groupId>
+              <artifactId>commons-logging</artifactId>
+            </exclusion>
+          </exclusions>
         </dependency>
         <dependency>
           <groupId>org.apache.hadoop.thirdparty</groupId>
@@ -446,6 +452,12 @@
       <version>${pdi.version}</version>
       <classifier>tests</classifier>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- These may not be needed in the future if this is moved out of karaf (BAD-1967) -->
@@ -458,6 +470,12 @@
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.14</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
   </dependencies>
