--- a/shims/apachevanilla/driver/pom.xml
+++ b/shims/apachevanilla/driver/pom.xml
@@ -37,6 +37,7 @@
     <awssdk.version>2.28.27</awssdk.version>
     <curator.version>5.6.0</curator.version>
     <org.apache.orc.version>1.9.6</org.apache.orc.version>
+    <lz4-java.version>1.10.3</lz4-java.version>
   </properties>
 
   <dependencyManagement>
