--- a/common-dependencies/pom.xml
+++ b/common-dependencies/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-hadoop-shims</artifactId>
-    <version>11.0.0.0-SNAPSHOT</version>
+    <version>11.0.0.1-243</version>
   </parent>
 
   <groupId>org.pentaho.hadoop.shims</groupId>
   <artifactId>pentaho-hadoop-shims-common-dependencies</artifactId>
-  <version>11.0.0.0-SNAPSHOT</version>
+  <version>11.0.0.1-243</version>
   <packaging>jar</packaging>
 
   <properties>
