--- a/shims/cdpdc71/pmr/pom.xml
+++ b/shims/cdpdc71/pmr/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-cdpdc71-reactor</artifactId>
-    <version>11.1.0.0-SNAPSHOT</version>
+    <version>11.1.0.0-144</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-cdpdc71-pmr-libs</artifactId>
-  <version>11.1.0.0-SNAPSHOT</version>
+  <version>11.1.0.0-144</version>
   <packaging>pom</packaging>
 
   <properties>
